tests/anp_test_4/anps.yaml
# copied from : https://github.com/kundan2707/network-policy-api/blob/f6c1cf24c0488f12c21920d2d9286fe0a380dd76/conformance/base/admin_network_policy/core-priority-field.yaml#L4
# with priority 60 (in second ANP), commenting-out the BANP
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: priority-50-example
spec:
  priority: 50
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "deny-all-ingress-from-slytherin"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
  egress:
  - name: "deny-all-egress-to-slytherin"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: old-priority-60
spec:
  priority: 60 
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "pass-all-ingress-from-slytherin"
    action: "Pass"
    from:
    - pods:
        namespaceSelector:
            matchLabels:
              conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
  egress:
  - name: "pass-all-egress-to-slytherin"
    action: "Pass"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
              conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
---
# apiVersion: policy.networking.k8s.io/v1alpha1
# kind: BaselineAdminNetworkPolicy
# metadata:
#   name: default
# spec:
#   subject:
#     pods:
#       namespaceSelector:
#         matchLabels:
#           conformance-house: gryffindor
#       podSelector:
#         matchLabels:
#           conformance-house: gryffindor
#   ingress:
#   - name: "allow-all-ingress-from-slytherin"
#     action: "Allow"
#     from:
#     - pods:
#         namespaceSelector:
#           matchLabels:
#               conformance-house: slytherin
#         podSelector:
#           matchLabels:
#             conformance-house: slytherin
#   egress:
#   - name: "allow-all-egress-to-slytherin"
#     action: "Allow"
#     to:
#     - pods:
#         namespaceSelector:
#            matchLabels:
#               conformance-house: slytherin
#         podSelector:
#           matchLabels:
#             conformance-house: slytherin
